fix oversized containers on timeline on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -589,7 +589,7 @@ ul {
   
   /* Full-width containers */
     .container {
-      width: 100%;
+      width: 80%;
       padding-left: 70px;
       padding-right: 25px;
     }
